# mycloud-django-react

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.override.example.yml  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
backend/: .coveragerc  Dockerfile  pyproject.toml  pytest.ini
backend/core/: asgi.py  consumers.py  middleware.py  permissions.py  settings.py  urls.py  validators.py
backend/storage/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/storage/migrations/: 0001_initial.py  0002_initial.py
backend/tests/: conftest.py
backend/tests/core/: test_consumers.py  test_middleware.py  test_settings.py
backend/tests/storage/: test_api.py  test_external_access.py  test_file_api.py  test_file_permissions.py  test_models.py  test_signals.py  test_utils.py
backend/tests/users/: test_admin_management.py  test_auth.py  test_auth_api.py  test_registration.py  test_signals.py  test_user_me.py
backend/users/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: .prettierrc  Dockerfile  eslint.config.ts  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: apiClient.ts
frontend/src/constants/: config.ts
frontend/src/pages/: AdminPage.tsx  DashboardPage.tsx  HomePage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/routes/: ProtectedRoute.tsx  (+2 more)
(+97 files in other folders)
