[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "gunicorn>=24.1.1",
    "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "model-bakery>=1.23.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
]
